# internal/data/model/stores.gen.go
@@ -1,0 +1,26 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package model
+
+import (
+	"time"
+)
+
+const TableNameStore = "stores"
+
+// Store mapped from table <stores>
+type Store struct {
+	ID        int64     `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
+	StoreID   int64     `gorm:"column:store_id;not null" json:"store_id"`
+	UserID    int64     `gorm:"column:user_id;not null" json:"user_id"`
+	Name      string    `gorm:"column:name;not null" json:"name"`
+	CreatedAt time.Time `gorm:"column:created_at;not null;default:CURRENT_TIMESTAMP" json:"created_at"`
+	UpdatedAt time.Time `gorm:"column:updated_at;not null;default:CURRENT_TIMESTAMP" json:"updated_at"`
+}
+
+// TableName Store's table name
+func (*Store) TableName() string {
+	return TableNameStore
+}
