# internal/data/model/users.gen.go
@@ -1,0 +1,27 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package model
+
+import (
+	"time"
+)
+
+const TableNameUser = "users"
+
+// User mapped from table <users>
+type User struct {
+	ID           int64     `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
+	Username     string    `gorm:"column:username;not null" json:"username"`
+	PasswordHash string    `gorm:"column:password_hash;not null" json:"password_hash"`
+	Role         string    `gorm:"column:role;not null" json:"role"`
+	Email        string    `gorm:"column:email;not null" json:"email"`
+	CreatedAt    time.Time `gorm:"column:created_at;not null;default:CURRENT_TIMESTAMP" json:"created_at"`
+	UpdatedAt    time.Time `gorm:"column:updated_at;not null;default:CURRENT_TIMESTAMP" json:"updated_at"`
+}
+
+// TableName User's table name
+func (*User) TableName() string {
+	return TableNameUser
+}
